# loremaster

./: .codecov.yml  Cargo.toml  README.md  build.sh  spin.toml
.github/workflows/: audit.yml  ci.yml
.zed/: settings.json
crates/characters/: Cargo.toml
crates/characters-comp/: Cargo.toml
crates/characters-comp/src/: bindings.rs  lib.rs
crates/characters/src/: bindings.rs  lib.rs
crates/characters/wit/: world.wit
crates/cultures/: Cargo.toml
crates/cultures-comp/: Cargo.toml
crates/cultures-comp/src/: bardings.rs  bindings.rs  dwarves.rs  hobbits.rs  lib.rs  rangers.rs
crates/cultures-comp/wit/: world.wit
crates/cultures/src/: bardings.rs  bindings.rs  bree.rs  dwarves.rs  elves.rs  hobbits.rs  lib.rs  rangers.rs
crates/cultures/wit/: world.wit
crates/rand-utils/: Cargo.toml
src/: api.rs  bindings.rs  character.rs  characters.rs  cultures.rs  lib.rs  names.rs  rand.rs  rand_utils.rs
src/cultures/: bardings.rs  bree.rs  dwarves.rs  elves.rs  hobbits.rs  rangers.rs
src/names/: barding.rs  dwarves.rs  elves.rs  hobbit.rs  hobbits.rs  men.rs
src/names/men/: bardings.rs  bree.rs  rangers.rs
wit/: composition.wac  world.wit
