[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
categories = ["games"]
edition = "2021"
keywords = ["tor", "rpg", "random", "generators"]
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand-utils = { path = "./crates/rand-utils" }
routefinder = "0.5.4"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
spin-sdk = "3.0.1"
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }

[workspace.lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"

[package]
name = "loremaster"
description = "Tools to help Loremasters running The One Ring 2E"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spin-sdk.workspace = true
utoipa = "4.2.3"
utoipa-scalar = "0.1.0"
wit-bindgen-rt.workspace = true

[dev-dependencies]
routefinder.workspace = true

[package.metadata.component]
package = "loremaster:handler"

[package.metadata.component.target.dependencies]
"loremaster:characters" = { path = "./crates/characters/wit" }
"loremaster:cultures" = { path = "./crates/cultures/wit" }

[lints]
workspace = true

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
