[package]
name = "loremaster"
description = "Tools to help Loremasters running The One Ring 2E"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
categories = ["games"]
edition = "2021"
keywords = ["tor", "rpg", "random", "generators"]
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.94"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
strum = { version = "0.26.3", features = ["derive"] }
utoipa = "5.3.0"
utoipa-scalar = "0.2.0"

[dev-dependencies]
routefinder = "0.5.4"

[lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
