[package]
name = "characters"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
wit-bindgen-rt.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "loremaster:characters"

[package.metadata.component.target.dependencies]
"loremaster:cultures" = { path = "../cultures/wit" }
