[package]
name = "cultures-comp"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
rand-utils.workspace = true
strum.workspace = true
wit-bindgen-rt.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:cultures-comp"

[package.metadata.component.dependencies]
