[package]
name = "cultures"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[dev-dependencies]
rand-utils.workspace = true

[lints]
workspace = true
